--- a/Components/DateTimePicker/Readme.me
+++ b/Components/DateTimePicker/Readme.me
@@ -1,1 +1,54 @@
 
+# ⭐ Power Apps Date Time Picker
+
+![Power Apps](https://img.shields.io/badge/built%20with-Power%20Apps-purple?style=flat-square)
+![Version](https://img.shields.io/badge/version-1.0.0-blue?style=flat-square)
+[![License](https://img.shields.io/github/license/SantaRadovan/PowerAppsUI?style=flat-square)](../../LICENSE)
+
+A simple, reusable, and customizable **Date Time Picker** built for Power Apps Canvas Apps. Easily select date and time with customizable options such as 12 or 24 hours format or custom color.
+
+---
+
+## ✨ Features
+
+- ⭐ 12 or 24 hours format
+- 🎨 Fully customizable (color)
+- 🔄 Two-way binding (user input + read-only modes)
+- 🔧 Lightweight and easy to integrate
+- 📱 Mobile and desktop responsive
+
+---
+
+## 📸 Demo
+
+
+
+---
+
+## 🚀 Getting Started
+
+### 1. Download the Component
+
+Download the latest `.msapp` file.
+
+### 2. Import to Power Apps
+
+1. Open your Power Apps Canvas App.
+2. Go to **Insert** > **Get more components** > **Import component**.
+3. Upload the `.msapp` file.
+
+### 3. Add to Screen
+
+- Drag and drop the component onto your screen.
+
+---
+
+## ⚙️ Properties
+
+| Property | Type | Description |
+|---------|------|-------------|
+| `TwelveHoursFormat` | Boolean | If selected it use 12-hours format (AM/PM) |
+| `Color` | Color | Color of the component |
+| `IsReadOnly` | Boolean | Set to true to disable interaction |
+
+---
